--- a/peers-javaxsound/pom.xml
+++ b/peers-javaxsound/pom.xml
@@ -4,11 +4,13 @@
 
   <groupId>net.sourceforge.peers</groupId>
   <artifactId>peers-javaxsound</artifactId>
-  <version>0.5.1-SNAPSHOT</version>
+  <version>0.5.2</version>
   <packaging>jar</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
